# ground-station

./: .flake8  .gitignore  CONTRIBUTING.md  ConfigureFunctions.py  Dockerfile  GroundStation.py  LICENSE  Pipfile  README.md  UI_functions.py  config.json  data_block.py  data_log.txt  groundStationV1.py  groundradio.py  launch_canada.json  main.py  main_v2.py  packet.py  packets.py  pyproject.toml  read_functions.py  requirements.txt  serial.py  telem-parser.py  ui.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request.md
.github/workflows/: autodoc.yml  black.yml  flake8lint.yml  pyrightlint.yml  pytest.yml
Groundstation Reciever-Transmitter Module/: GroundStation_Schematic.s##
hardware/: GroundStation_revA.brd  GroundStation_revA.sch  pending fixes.txt
log-parser/: log_schema.py  parse.py
logs/: payload_log_2022_Nov_02_13_09_16.txt.txt
missions/: Idle.mission  TestData.mission  converted.mission  devil test.mission  el_blasto_log.mission  el_blasto_transmit.mission  error_and_status.mission  hybrid_flight_data.mission  july_12th.mission  one.mission  spec.mission
missions/archive/: TestData.mission  TestWithVoltage.mission  josh_chair_spinny_bad.mission  josh_chair_spinny_good.mission
modules/misc/: cli.py  config.py  converter.py  csv_converter.py  logfile_converter.py  messages.py  thresholds.py  unit_conversions.py
modules/serial/: GroundStation.py  rn2483_radio.py  serial.py  serial_driver.py  serial_manager.py  serial_rn2483_emulator.py  serial_rn2483_radio.py  serial_test.py
modules/telemetry/: __init__.py  block.py  command_block.py  constants.py  control_block.py  csv_writer.py  data.py  data_block.py  errors.py  faults.py  json_packets.py  mbr.py  packets.py  parsing_utils.py  replay.py  sd_block.py  status.py  status_data.py  superblock.py  telemetry.py  telemetry_errors.py  telemetry_packet.json  telemetry_utils.py  telemetry_websocket_commands.py  utils.py
range-test/: config_lora.json  el_blasto.csv  receive.py  test.csv  transmit.py
static/: test.html  websocket.json
telem-parser/: telem-parser.md  telem-parser.py
tests/: test_block_data.py  test_block_header.py  test_block_parsing.py  test_config.py  test_conversions.py  test_gh_workflow.py  test_json_packets.py  test_packet_header.py  test_telemetry_websocket_commands.py  test_websocket_commands.py
(+71 files in other folders)
