[project]
name = "Telemetry Server"
description = "The CUInSpace ground station telemetry server for parsing and distributing rocket telemetry."
license = {text = "MIT"}
authors = [
    {name = "Matteo Golin", email = "matteo.golin@gmail.com"},
    {name = "Thomas Selwyn"},
    {name = "Samuel Dewan"},
    {name = "Arsalan Syed"}
]
requires-python = ">=3.11"
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/CarletonURocketry/ground-station"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.pyright]
ignore = ["./telem-parser/"]
exclude = ["./venv/"]

# Strict checking
strictListInference = true
strictDictionaryInference = true
strictSetInference = true

reportPropertyTypeMismatch = true  # Setter types must match getter types
reportFunctionMemberAccess = true

# Reporting missing type annotations
reportMissingParameterType = "error"  # All parameters must be typed
reportMissingTypeArgument = "error"

reportUntypedFunctionDecorator = "error"
reportUntypedClassDecorator = "error"
reportUntypedBaseClass = "error"
reportUntypedNamedTuple = "error"

reportUnknownMemberType = "error"
reportUnknownVariableType = "error"
reportUnknownArgumentType = "error"
reportUnknownParamaterType = "error"

# Report bad ignores
reportUnnecessaryTypeIgnoreComment = "error"

# Best practices
reportSelfClsParameterName = "error"
reportConstantRedefinition = "error"
reportUninitializedInstanceVariable = "error"
reportImportCycles = "warning"
reportDeprecated = "error"
reportInvalidTypeVarUse = "warning"

reportUnnecessaryIsInstance = "warning"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryContains = "warning"
reportAssertAlwaysTrue = "warning"
reportImplicitStringConcatenation = "warning"
reportMatchNotExhaustive = "warning"

reportUnusedImport = "warning"
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"
reportUnusedExpression = "warning"
reportDuplicateImport = "warning"

reportPrivateUsage = "warning"
reportPrivateImportUsage = "warning"
reportShadowedImports = "error"

reportIncompatibleVariableOverride = "warning"
reportOverlappingOverload = "warning"


[tool.black]
line-length = 120
